<resources>
    <string name="app_name">WhatsNext</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="watchlist">Watchlist</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="register_now">Register now</string>
    <string name="click_to_register">Click to register</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="community">Community</string>
    <string name="username">Username</string>
    <string name="plus">+</string>
    <string name="add_friends">Add friends</string>
    <string name="add_movie">Add movie</string>
    <string name="emailTitle">Email:</string>
    <string name="usernameTitle">Username</string>
    <string name="accept_friend_requests">Accept Friend Requests</string>
    <string name="x">X</string>
    <string name="friend_list">Friend List</string>
    <string name="create_group">Create group</string>
    <string name="group_name">Group name</string>
    <string name="confirm">Confirm</string>
    <string name="create_group_2">Create Group</string>
    <string name="group_name_title">Group Name</string>
    <string name="users">users</string>
    <string name="members_of_group">Members of Group</string>
    <string name="recommended_movie">Recommended movie</string>
    <string name="pick_a_movie">Pick a movie</string>
    <string name="group_name_2">Group Name</string>
    <string name="textview">TextView</string>
    <string name="nameLogin">Name</string>
    <string name="buttonLogin">Button</string>
    <string name="no_movies_in_common">no movies in common</string>
    <string name="recommendation">Recommendation:</string>
    <string name="recommendation_status">Recommendation Status</string>
    <string name="watchlist_explanation">Add movies to your watchlist by using the search page!</string>
    <string name="whatsnext">WhatsNext</string>

</resources>