<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="27dp"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="413dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameLogin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="36dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="92dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>